--- a/frontend/src/examples/example1/example1.component.html
+++ b/frontend/src/examples/example1/example1.component.html
@@ -1,3 +1,9 @@
-<p>
-  test1 works!
-</p>
+<app-radio-buttons (radioButtonChange)="getAcivateRole($event)">
+
+</app-radio-buttons>
+<div  *ngIf="selected==='TOP'">  
+  top radio button selected  
+</div>  
+<div  *ngIf="selected==='RIGHT'">  
+  right radio button selected  
+</div>   
