--- a/frontend/src/admin/bookmark-panel/bookmark-panel.component.html
+++ b/frontend/src/admin/bookmark-panel/bookmark-panel.component.html
@@ -51,6 +51,8 @@
             <div class="form-group" style="margin-top: 10px">
                 <label for="position">Position: </label>
                 <app-radio-buttons 
+                [id]="'position'"
+                [name]="'position'"
                 (radioButtonChange)="getValues($event)"
                  [controlName]="addBookmarkForm.controls.position"
                  >
