--- a/frontend/src/shared/forms/radio-buttons/radio-buttons.component.scss
+++ b/frontend/src/shared/forms/radio-buttons/radio-buttons.component.scss
@@ -1,4 +1,4 @@
-@import '../../assets/main-style.scss';
+@import '../../../assets/main-style.scss';
 
 .bookmark-add-form__label--position {
     padding: 5px;
