--- a/frontend/src/admin/bookmark-form/bookmark-form.component.scss
+++ b/frontend/src/admin/bookmark-form/bookmark-form.component.scss
@@ -4,12 +4,11 @@
 .bookmark-edit {
     padding: 15px;
 
-    .bookmark-edit-form {
+    .bookmark-edit__form {
         display: flex;
         flex-direction: column;
         justify-content: center;
         align-items: center;
-
 
         .bookmark-ediotr__textarea {
             background-color: transparent;
@@ -30,6 +29,10 @@
             padding: 5px;
             font-weight: bold;
             color: $main-color;
+        }
+
+        .form-group_position {
+            margin-top: 10px;
         }
     }
 }
