--- a/frontend/src/admin/bookmark-info/bookmark-info.component.scss
+++ b/frontend/src/admin/bookmark-info/bookmark-info.component.scss
@@ -8,17 +8,19 @@
                
     &:last-child {
         border:none;
-
     }
+
     .bookmark-info--title {
         width: 170px;
     }
-    .bookmark-info--position{
+
+    .bookmark-info--position {
         width: 170px;
         margin-left: 10px;
     }
-  
-}
-strong{
-    color: $main-color;
+    
+    .bookmark-info--data {
+        color: $main-color;
+    }
+
 }
