todo: like mutations on front

--- a/frontend/src/shared/components/like-btn/like-btn.component.html
+++ b/frontend/src/shared/components/like-btn/like-btn.component.html
@@ -1,5 +1,5 @@
 <label class="container">
-  <input type="checkbox">
+  <input type="checkbox" [checked]="isChecked">
   <span class="heart">
     <i class="fa fa-heart" aria-hidden="true"></i>
   </span>
