--- a/frontend/src/document/doc/doc.component.html
+++ b/frontend/src/document/doc/doc.component.html
@@ -3,7 +3,12 @@
     <span class="doc__desc--title">{{document.data.document.title}}</span>
     <span class="doc__desc--author">{{document.data.document.author}}</span>
     <span class="doc__desc--date">{{document.data.document.date}}</span>
-    <app-like-btn [buttonStyle]="'doc__desc--like'"></app-like-btn>
+    <app-like-btn 
+      [buttonStyle]="'doc__desc--like'"
+      [isChecked]="document.data.like"
+      (change)="checkIfLiked($event)"
+      >
+    </app-like-btn>
   </div>
 
   <app-pdf-view [adress]="url"></app-pdf-view>
