--- a/frontend/src/admin/bookmark-form/bookmark-form.component.scss
+++ b/frontend/src/admin/bookmark-form/bookmark-form.component.scss
@@ -12,9 +12,8 @@
 
         .bookmark-ediotr__textarea {
             background-color: transparent;
-            margin-right: 15px;
+            margin: 10px 15px 0 0;
             padding: 10px 12px;
-            margin-top: 10px;
             vertical-align: middle;
             border: 1px solid #A5B1BE;
             color: $main-font-color;
