--- a/frontend/src/review/review/review.component.html
+++ b/frontend/src/review/review/review.component.html
@@ -1,3 +1,6 @@
-<p>
-  review works!
-</p>
+<div>
+  <app-nav-menu [navMenuStyle]="'nav-bar'" (clickedEmitter)="clickedTab($event)"></app-nav-menu>
+</div>
+<div>
+  <app-prev-container>{{ message }}</app-prev-container>
+</div>
