--- a/frontend/src/admin/bookmark-panel/bookmark-panel.component.scss
+++ b/frontend/src/admin/bookmark-panel/bookmark-panel.component.scss
@@ -1,5 +1,11 @@
 @import '../../assets/main-style.scss';
 
+.loading-spinner {
+    display: flex;
+    justify-content: center ;
+    align-items: flex-end;
+}
+
 .container {
     display: flex;
     margin-top: 60px;
