--- a/frontend/src/core/login/login.component.html
+++ b/frontend/src/core/login/login.component.html
@@ -25,7 +25,7 @@
     </div>
 
 
-    <app-submit-btn [buttonStyle]="'login-form__submit'" [type]="'submit'"
+    <app-submit-btn [disabled]="loginForm.invalid" [buttonStyle]="'login-form__submit'" [type]="'submit'"
       >Sign In</app-submit-btn
     >
 
