--- a/frontend/src/core/login/login.component.html
+++ b/frontend/src/core/login/login.component.html
@@ -40,15 +40,14 @@
   </section>
 
   <section class="login-form__part login-form__part--last">
-    <button class="login-form__FB">
+    <button class="login-form__FB" (click)="signInWithFB()" type="button">
       <i class="fa fa-facebook-official"></i>
       <p class="login-form__FB--text">Log In With Facebook</p>
     </button>
 
-    <button class="login-form__GM">
+    <button class="login-form__GM" >
         <i class="fa fa-google"></i>
         <p class="login-form__GM--text">Log In With Gmail</p>
       </button>
   </section>
 </form> 
-
