store in progress

--- a/frontend/src/review/nav-menu/nav-menu.component.html
+++ b/frontend/src/review/nav-menu/nav-menu.component.html
@@ -1,13 +1,13 @@
 <div [class]="navMenuStyle">
   <app-submit-btn 
-    [buttonStyle]="(clickedTab === 'accepted') ? 'nav-menu__button clicked' : 'nav-menu__button'"
-    (click)="onClick('accepted')">Accepted</app-submit-btn>
+    [buttonStyle]="(clickedTab === 'ACCEPTED') ? 'nav-menu__button clicked' : 'nav-menu__button'"
+    (click)="onClick('ACCEPTED')">Accepted</app-submit-btn>
   
   <app-submit-btn 
-    [buttonStyle]="(clickedTab === 'pending') ? 'nav-menu__button clicked' : 'nav-menu__button'"
-    (click)="onClick('pending')">Pending</app-submit-btn>
+    [buttonStyle]="(clickedTab === 'PENDING') ? 'nav-menu__button clicked' : 'nav-menu__button'"
+    (click)="onClick('PENDING')">Pending</app-submit-btn>
   
   <app-submit-btn 
-    [buttonStyle]="(clickedTab === 'rejected') ? 'nav-menu__button clicked' : 'nav-menu__button'"
-    (click)="onClick('rejected')">Rejected</app-submit-btn>
+    [buttonStyle]="(clickedTab === 'REJECTED') ? 'nav-menu__button clicked' : 'nav-menu__button'"
+    (click)="onClick('REJECTED')">Rejected</app-submit-btn>
 </div>
