--- a/frontend/src/core/register/register.component.html
+++ b/frontend/src/core/register/register.component.html
@@ -109,20 +109,20 @@
                   [id]="'file'"
                   [formInputStyle]="'register-form__file'" 
                   [type]="'file'" 
-                  [controlName]="registerForm.controls.picture"
                   [accept]="'image/*'"
+                  [value]=""
                   (change)="pictureUpload($event)">
               </app-input>
               <app-image 
-                *ngIf ="!pictureUrl" 
-                [url]="'../../assets/img/avatar.png'" 
+                
+                [url]="getPic()" 
                 [className]="'profile-img'">
               </app-image>
-              <app-image 
+              <!-- <app-image 
                 *ngIf ="pictureUrl" 
                 [url]="pictureUrl" 
                 [className]="'profile-img'">
-              </app-image>
+              </app-image> -->
             </div>
       <app-submit-btn
         [buttonStyle]="'register-form__submit'"
