--- a/frontend/src/core/nav/nav.component.html
+++ b/frontend/src/core/nav/nav.component.html
@@ -5,7 +5,11 @@
     <div *ngIf="bookmark$ | async" class="logo-bookmarks-container">
       <h3 class="logo"><a href="#">LOGO</a></h3>
       <ul class="bookmarks" *ngFor="let item of bookmark$ | async">
-        <li *ngIf="item?.position === 'TOP'" (click)="navigateToSubpage(item.title)" ><a >{{item.title}}</a></li>
+        <li 
+        *ngIf="item?.position === 'TOP'" 
+        (click)="navigateToSubpage(item.title)" >
+        <a >{{item.title}}</a>
+        </li>
       </ul>
     </div>
     <div class="header-user-info">
@@ -13,8 +17,14 @@
         <input type="checkbox" id="drop" />
         <label for="drop">{{(name$ | async)?.firstName}} {{(name$ | async)?.lastName}}</label>
         <ul class="content">
-          <li><i class="fa fa-user"></i>Profile</li>
-          <li (click)="logOut()"><i class="fa fa-sign-out"></i>Sign out</li>
+          <li>
+            <i class="fa fa-user"></i>
+            Profile
+          </li>
+          <li (click)="logOut()">
+            <i class="fa fa-sign-out"></i>
+            Sign out
+          </li>
         </ul>
       </div>
     </div>
