created and styled basic text editor

--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -113,5 +113,10 @@ body {
       right: 15%;
       width: 280px;
     }
+
+    app-editor-view {
+      grid-column: 2/7;
+      grid-row: 2/3;
+    }
   }
 }
