added navigation to user-editor/admin-user-editor; fixed problem with user-editor/admin-user-editor

--- a/frontend/src/core/sidebar/sidebar.component.html
+++ b/frontend/src/core/sidebar/sidebar.component.html
@@ -1,6 +1,6 @@
 <div class="sidebar">
   <ul >
-    <li *ngIf="(role$ | async)?.role === 'admin'"><a (click)="navigateToAdminUserEditor()">{{(role$ | async)?.role}}</a></li>
+    <li *ngIf="(role$ | async)?.role === 'admin'"><a (click)="navigateToAdminUserEditor()">User editor</a></li>
     <li><a (click)="navigateToFav()">Favourites</a></li>
   </ul>
   <ul *ngFor="let item of bookmark$ | async">
