--- a/frontend/src/shared/components/routerBTN/router-btn/router-btn.component.html
+++ b/frontend/src/shared/components/routerBTN/router-btn/router-btn.component.html
@@ -1,1 +1,5 @@
-<a [routerLink]="[link]" [class]="class"><ng-content></ng-content></a>
+<a 
+    [routerLink]="[link]" 
+    [class]="class">
+    <ng-content></ng-content>
+</a>
