--- a/frontend/src/core/nav/nav.component.scss
+++ b/frontend/src/core/nav/nav.component.scss
@@ -1,11 +1,11 @@
 @import '../../assets/main-style.scss';
 
-
-
 header {
   background-color: $sec-back-color;
   margin: 0;
-  height: 100%;
+  height: 75px;
+  padding-top: 0px;
+  box-shadow:  3px 2px 25px rgba(0, 0, 0, 0.75);
 
   @media (min-width: tablet) {
     display: flex;
@@ -13,8 +13,8 @@ header {
     flex-direction: row;
     justify-content: space-between;
     background-color: $sec-back-color;
-  }
 
+  }
   #toggle {
     display: none;
 
@@ -32,17 +32,17 @@ header {
         display: none;
     }
   }
-
+  
   nav {
       display: none;
       @media (min-width: $tablet) {
-        //   width: 100vw;
           display: flex;
           align-items: center;
+          align-content: center;
           justify-content: space-between;
-          box-shadow:  3px 2px 25px rgba(0, 0, 0, 0.75)
+          height: 75px;
+          
       }
-    
   }
    
   #toggle:checked + nav {
@@ -56,7 +56,6 @@ header {
 
 
   .logo-bookmarks-container {
-
     @media (min-width: $tablet) {
       display: flex;
       flex-direction: row;
@@ -69,7 +68,6 @@ header {
         li {
           display: inline-block;
           padding-top: 10px;
-
         }
       }
     }
@@ -92,104 +90,36 @@ header {
     }
   }
 
-  .header-user-info {
-    display: flex;
-    flex-direction: row;
-    padding: 10px;
+  .dropdown{
+    display:inline-block;
+    position:relative;
+    margin-right: 40px;
 
-    .dropdown-container {
-      align-self: center;
-      width: 150px;
-      margin: auto;
-      text-align: center;
-      position: relative;
-      @media (min-width: $tablet) {
-        width: 200px;
-      }
+    .dropdown--list{
+    background-color:#fff;
+    box-shadow:0 4px 8px rgba(0,0,0,0.2);
+    z-index:1;
+    visibility:hidden;
+    position:absolute;
+    min-width:100%;
+    padding: 15px;
+    opacity:0;
+    transition:.3s;
+    text-align: center;
+  }
 
-      ul {
-        list-style-type: none;
-      }
-
-      label {
-        position: relative;
-        display: block;
-        width: 100%;
-        font-size: 1.2rem;
-        line-height: 40px;
-        cursor: pointer;
-        background: $main-color;
-        border: 1px solid $main-font-color;
-        color: $main-font-color;
-        padding-right: 10px;
-
-        @media (min-width: $tablet) {
-            line-height: 30px;
-          }
-
-        &:hover {
-          background: #e09705
-        }
-
-        &:after {
-          content: "\203A";
-          position: absolute;
-          width: 40px;
-          font-size: 32px;
-          right: 0;
-          padding-left: 0px;
-          top: 0;
-          bottom: 0;
-          transform: rotate(90deg);
-        }
-      }
-
-      .content {
-        height: 0;
-        max-height: 0px;
-        margin: 0;
-        text-align: left;
-        overflow: hidden;
-        transition: 0.3s linear;
-        position: absolute;
-        z-index: 999;
-        background: $main-font-color;
-        color: $back-color;
-
-        li {
-          i {
-            color: $main-color;
-            margin-right: 10px;
-          }
-
-          padding: 15px 10px;
-          border-bottom: 1px solid $back-color;
-          text-transform: uppercase;
-          text-align: center;
-          cursor: pointer;
-
-          &:first-child {
-            padding-top: 10px;
-          }
-
-          &:last-child {
-            padding-bottom: 10px;
-          }
-        }
-      }
-
-      input {
-        display: none;
-
-        &:checked~.content {
-          height: auto;
-          width: 100%;
-          max-height: 900px;
-          transition: max-height 1s ease-in;
-          overflow: hidden;
-        }
-      }
-    }
+  .dropdown__icon {
+    color: $main-color;
+    margin-left: 8px;
+    transition:.1s;
+  }
+ }
+ app-router-btn:hover .dropdown__icon {
+  color: #fff;
+}
+  .dropdown:hover .dropdown--list{
+    visibility:visible;
+    opacity:1;
   }
 
   a {
@@ -208,7 +138,6 @@ header {
 
       @media (min-width: $tablet) {
         border-bottom: none;
-        border-right: 1px solid rgba(0, 0, 0, 0.2);
         padding-right: 15px;
       }
   }
