--- a/frontend/src/shared/components/button/button.component.scss
+++ b/frontend/src/shared/components/button/button.component.scss
@@ -1,5 +1,6 @@
 @import '../../../assets/main-style.scss';
 
+//BOOKMARK 
 .boomark-info__button{
     background: $main-color;
     border: none;
@@ -27,9 +28,10 @@
     padding: 1rem;
     border-radius: 3px;
     transition: 0.4s;
+
         &:hover {
-            background-color: #2C87D8;
-        }
+                background-color: #2C87D8;
+            }
 }
 
 .add-bookmark {
@@ -40,8 +42,9 @@
     border: none;
     cursor: pointer;
     background-color: $back-color;
-
 }
+
+//MODAL
 .modal__close-btn {
     cursor: pointer;
     border: 0;
@@ -51,4 +54,14 @@
     top: 8px;
     right: 8px;
     font-size: 1.2em;
+  }
+
+  // DROPDOWN
+  .dropdown__button{
+    border:none;
+    padding: 15px 25px;
+    background-color: $main-color;
+    color:white;
+    transition:.3s;
+    cursor:pointer;
   }
