--- a/frontend/src/core/nav/nav.component.html
+++ b/frontend/src/core/nav/nav.component.html
@@ -5,15 +5,16 @@
     <div *ngIf="bookmark$ | async" class="logo-bookmarks-container">
       <h3 class="logo"><a href="#">LOGO</a></h3>
       <ul class="bookmarks" *ngFor="let item of bookmark$ | async">
-        <li 
-        *ngIf="item?.position === 'TOP'" 
-        (click)="navigateToSubpage(item.title)" >
-        <a >{{item.title}}</a>
+          <li 
+            *ngIf="item?.position === 'TOP'" 
+            (click)="navigateToSubpage(item.title)">
+            <a >{{item.title}}</a>
         </li>
       </ul>
     </div>
       <div class="dropdown">
-        <app-button [class]="'dropdown__button'">
+        <app-button 
+          [class]="'dropdown__button'">
           {{(name$ | async)?.firstName}} {{(name$ | async)?.lastName}}
           <i class="fa fa-chevron-down" aria-hidden="true"></i>
         </app-button>
@@ -26,7 +27,8 @@
           <app-router-btn 
             (click)="logOut()" 
             [class]="'dropdown--link'" 
-            href="#">Sign out<i class="fa fa-sign-out dropdown__icon"></i>
+            href="#">Sign out
+            <i class="fa fa-sign-out dropdown__icon"></i>
           </app-router-btn>
         </div>
       </div>
