--- a/frontend/src/core/nav/nav.component.html
+++ b/frontend/src/core/nav/nav.component.html
@@ -1,6 +1,6 @@
 <header>
   <label for="toggle">&#9776;</label>
-  <input type="checkbox" id="toggle" />
+  <input type="checkbox" id="toggle" class="toggle" />
   <nav>
     <div *ngIf="bookmark$ | async" class="logo-bookmarks-container">
       <h3 class="logo"><a href="#">LOGO</a></h3>
