show reviewer prevs done

--- a/frontend/src/review/doc-prev/doc-prev.component.html
+++ b/frontend/src/review/doc-prev/doc-prev.component.html
@@ -7,7 +7,7 @@
   <p class="doc-prev__content">
     {{ preview.preview }}
   </p>
-  <app-router-btn [link]="'../doc/'+preview.id" [class]="'doc-prev__open'">
+  <app-router-btn [link]="'../review/'+preview.id" [class]="'doc-prev__open'">
     Review
   </app-router-btn>
 </article>
