--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -60,7 +60,9 @@ body {
       grid-row: 1/7;
     }
     
-    app-admin-user-editor, app-user-editor{
+    app-review,
+    app-admin-user-editor, 
+    app-user-editor {
       grid-column: 2/7;
       grid-row: 2/3;
       padding-top: 2em;
