why do i even live on this planet?

--- a/frontend/src/editor/editor-view/editor-view.component.html
+++ b/frontend/src/editor/editor-view/editor-view.component.html
@@ -1,1 +1,4 @@
-<app-text-page></app-text-page>
+<section *ngFor="let p of (pages$ | async)">
+    <app-text-page [page]="p"></app-text-page>
+</section>
+
