--- a/frontend/src/editor/text-page/text-page.component.scss
+++ b/frontend/src/editor/text-page/text-page.component.scss
@@ -5,6 +5,7 @@
   color: #000000;
   height: 1000px;
   margin: 2em;
-  padding: 3em;
+  padding: 0 3em;
   width: 100%;
+  word-break: break-all;
 }
