--- a/frontend/src/core/nav/nav.component.html
+++ b/frontend/src/core/nav/nav.component.html
@@ -22,12 +22,14 @@
           <app-router-btn 
             [class]="'dropdown--link'" 
             [link]="'/user-editor'"> 
-            Edit Profile<i class="fa fa-user dropdown__icon" ></i>
+              Edit Profile
+            <i class="fa fa-user dropdown__icon" ></i>
           </app-router-btn>
           <app-router-btn 
             (click)="logOut()" 
             [class]="'dropdown--link'" 
-            href="#">Sign out
+            href="#">
+              Sign out
             <i class="fa fa-sign-out dropdown__icon"></i>
           </app-router-btn>
         </div>
